[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/combat/health_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/combat/hitbox_area.tscn" type="PackedScene" id=3]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )

[node name="texture" type="Sprite" parent="."]

[node name="collision" type="CollisionShape2D" parent="."]
disabled = true

[node name="health_bar" parent="." instance=ExtResource( 1 )]

[node name="animation" type="AnimationPlayer" parent="."]

[node name="notifier" type="VisibilityNotifier2D" parent="."]

[node name="monitoring_timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox_area" parent="." instance=ExtResource( 3 )]

[connection signal="screen_entered" from="notifier" to="." method="_on_notifier_screen_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
[connection signal="timeout" from="monitoring_timer" to="." method="_on_monitoring_timer_timeout"]
